--- a/html-boilerplate/index.html
+++ b/html-boilerplate/index.html
@@ -7,6 +7,27 @@
     <title>Webpage</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <ul>
+      <li>Bread</li>
+      <li>Chocolate</li>
+      <li>Nuts</li>
+    </ul>
+    <ol>
+      <li>Write Code</li>
+      <li>Commit project</li>
+      <li>Write more Code</li>
+    </ol>
+    <ul>
+      <li>Paris</li>
+      <li>Vienna</li>
+      <li>Milan</li>
+    </ul>
+    <ol>
+      <li>The Shawshank Redemption</li>
+      <li>The Godfather</li>
+      <li>The Dark Knight</li>
+      <li>The Godfather II</li>
+      <li>The Angry Man</li>
+    </ol>
   </body>
 </html>
