--- a/LandingPages/landing-page-1.html
+++ b/LandingPages/landing-page-1.html
@@ -8,75 +8,73 @@
     <link rel="stylesheet" href="landing-page-1.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="page">
-        <div class="header">
-          <div class="left-side">Header Logo</div>
-          <div class="right-side">
-            <ul>
-              <li><a href="#">header link one</a></li>
-              <li><a href="#">header link two</a></li>
-              <li><a href="#">header link three</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="description-container">
-          <div class="text">
-            <h2 class="heading">This website is awesome</h2>
-            <p class="description">
-              This website has some subtext that goes here under the main title.
-              It's a smaller font and the color is lower contrast
-            </p>
-            <button>Sign up</button>
-          </div>
-        </div>
-        <div class="information-container">
-          <div class="heading">Some random information</div>
-          <div class="image-container">
-            <div class="image"></div>
-            <div class="text">
-              this is some subtext under an illustration or image
-            </div>
-          </div>
-          <div class="image-container">
-            <div class="image"></div>
-            <div class="text">
-              this is some subtext under an illustration or image
-            </div>
-          </div>
-          <div class="image-container">
-            <div class="image"></div>
-            <div class="text">
-              this is some subtext under an illustration or image
-            </div>
-          </div>
-          <div class="image-container">
-            <div class="image"></div>
-            <div class="text">
-              this is some subtext under an illustration or image
-            </div>
-          </div>
-        </div>
-        <div class="quote-container">
-          <div class="quote">
-            This is an inspiring quote, or a testimonial from a customer. Maybe
-            it's just filling up space, or maybe people will actually read it.
-            Who knows&#63; All I know is that it looks nice.
-          </div>
-          <div class="author">-Thor, God of Thunder</div>
-        </div>
-        <div class="sign-up-container">
-          <div class="sign-up-text">
-            <p class="heading">Call to action! It's time&#33;</p>
-            <p class="description">
-              Sign up for our product by clicking that button right over
-              there&#33;
-            </p>
-          </div>
-          <button>Sign up</button>
-        </div>
-        <div class="footer">Copyright &#169; The Odin Project 2021</div>
+    <div class="header">
+      <div class="left-side">Header Logo</div>
+      <div class="right-side">
+        <ul>
+          <li><a href="#">header link one</a></li>
+          <li><a href="#">header link two</a></li>
+          <li><a href="#">header link three</a></li>
+        </ul>
       </div>
     </div>
+    <div class="page">
+      <div class="description-container">
+        <div class="text">
+          <h2 class="heading">This website is awesome</h2>
+          <p class="description">
+            This website has some subtext that goes here under the main title.
+            It's a smaller font and the color is lower contrast
+          </p>
+          <button>Sign up</button>
+        </div>
+      </div>
+      <div class="information-container">
+        <div class="heading">Some random information</div>
+        <div class="image-container">
+          <div class="image"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="image-container">
+          <div class="image"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="image-container">
+          <div class="image"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="image-container">
+          <div class="image"></div>
+          <div class="text">
+            this is some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
+      <div class="quote-container">
+        <div class="quote">
+          This is an inspiring quote, or a testimonial from a customer. Maybe
+          it's just filling up space, or maybe people will actually read it. Who
+          knows&#63; All I know is that it looks nice.
+        </div>
+        <div class="author">-Thor, God of Thunder</div>
+      </div>
+      <div class="sign-up-container">
+        <div class="sign-up-text">
+          <p class="heading">Call to action! It's time&#33;</p>
+          <p class="description">
+            Sign up for our product by clicking that button right over
+            there&#33;
+          </p>
+        </div>
+        <button>Sign up</button>
+      </div>
+    </div>
+    <div class="footer">Copyright &#169; The Odin Project 2021</div>
   </body>
 </html>
