--- a/LandingPages/landing-page-1.html
+++ b/LandingPages/landing-page-1.html
@@ -28,6 +28,9 @@
           </p>
           <button>Sign up</button>
         </div>
+        <div class="image-container">
+          <p>this is a placeholder for an image</p>
+        </div>
       </div>
       <div class="information-container">
         <div class="heading">Some random information</div>
@@ -64,15 +67,17 @@
         </div>
         <div class="author">-Thor, God of Thunder</div>
       </div>
-      <div class="sign-up-container">
-        <div class="sign-up-text">
-          <p class="heading">Call to action! It's time&#33;</p>
-          <p class="description">
-            Sign up for our product by clicking that button right over
-            there&#33;
-          </p>
+      <div class="sign-up-section">
+        <div class="sign-up-container">
+          <div class="sign-up-text">
+            <p class="heading">Call to action! It's time&#33;</p>
+            <p class="description">
+              Sign up for our product by clicking that button right over
+              there&#33;
+            </p>
+          </div>
+          <button>Sign up</button>
         </div>
-        <button>Sign up</button>
       </div>
     </div>
     <div class="footer">Copyright &#169; The Odin Project 2021</div>
