final commit of landing page

--- a/LandingPages/landing-page-1.html
+++ b/LandingPages/landing-page-1.html
@@ -34,28 +34,30 @@
       </div>
       <div class="information-container">
         <div class="heading">Some random information</div>
-        <div class="image-container">
-          <div class="image"></div>
-          <div class="text">
-            this is some subtext under an illustration or image
+        <div class="images-text">
+          <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
           </div>
-        </div>
-        <div class="image-container">
-          <div class="image"></div>
-          <div class="text">
-            this is some subtext under an illustration or image
+          <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
           </div>
-        </div>
-        <div class="image-container">
-          <div class="image"></div>
-          <div class="text">
-            this is some subtext under an illustration or image
+          <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
           </div>
-        </div>
-        <div class="image-container">
-          <div class="image"></div>
-          <div class="text">
-            this is some subtext under an illustration or image
+          <div class="image-container">
+            <div class="image"></div>
+            <div class="text">
+              this is some subtext under an illustration or image
+            </div>
           </div>
         </div>
       </div>
@@ -65,7 +67,9 @@
           it's just filling up space, or maybe people will actually read it. Who
           knows&#63; All I know is that it looks nice.
         </div>
-        <div class="author">-Thor, God of Thunder</div>
+        <div class="author-container">
+          <p>-Thor, God of Thunder</p>
+        </div>
       </div>
       <div class="sign-up-section">
         <div class="sign-up-container">
@@ -76,10 +80,14 @@
               there&#33;
             </p>
           </div>
-          <button>Sign up</button>
+          <div class="button-container">
+            <button>Sign up</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="footer">Copyright &#169; The Odin Project 2021</div>
+    <div class="footer-container">
+      <div class="footer">Copyright &#169; The Odin Project 2021</div>
+    </div>
   </body>
 </html>
