write game function that plays the game on a loop

--- a/JavaScript/RockPaperScissors/index.html
+++ b/JavaScript/RockPaperScissors/index.html
@@ -9,10 +9,7 @@
   </head>
   <body>
     <script>
-      let playerChoice = prompt("Enter rock, paper or scissors").toLowerCase();
-      let computerChoice = getComputerChoice();
-      let result = playRound(playerChoice, computerChoice);
-      console.log(result);
+      game();
     </script>
   </body>
 </html>
