--- a/JavaScript/RockPaperScissors/index.html
+++ b/JavaScript/RockPaperScissors/index.html
@@ -8,8 +8,9 @@
     <script src="rock-paper-scissors.js"></script>
   </head>
   <body>
-    <script>
-      game();
-    </script>
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
   </body>
+  <script src="rock-paper-scissors.js"></script>
 </html>
