--- a/CSSFoundation/Exercise-2/index.html
+++ b/CSSFoundation/Exercise-2/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Exercise 2</title>
-    <link rel="stylesheet" href="exercise2.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <p class="paragraphs">Number 1 - I'm a class!</p>
